<resources>
    <string name="app_name">SalesMan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="client_name">Client Name</string>
    <string name="client_credit">Client Credit</string>
    <string name="payment_id">Payment ID</string>
    <string name="payment_value">Payment Value</string>
    <string name="payment_type">Payment Type</string>
    <string name="voucher_cheque">Voucher/Cheque</string>
    <string name="date_time">Date - Time</string>
    <string name="client_id">Client ID</string>
    <string name="client_name_only">Client Name</string>
    <string name="order_id">Order ID</string>
    <string name="sales_order_total">Sales Order Total</string>
    <string name="unsuccessful_id">UnSuccessful ID</string>
    <string name="reason">Reason</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="reset_form">Reset Form</string>
    <string name="send_message">Send Message</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sub">Sub</string>
    <string name="discount">Discount</string>
    <string name="tax">Tax</string>
    <string name="cancel">CANCEL</string>
    <string name="note">NOTE</string>
    <string name="note_">Note</string>
    <string name="voucher_cheque_">Voucher / Cheque #</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="visa">Visa</string>
    <string name="sales_order">Sales Order</string>
    <string name="collect_payment">Collect Payment</string>
    <string name="unsuccessful">UnSuccessful</string>
    <string name="result">Result</string>
    <string name="contact_us">Contact Us</string>
    <string name="balance">Balance</string>
    <string name="last_payments">Last Payments</string>
    <string name="last_invoices">Last Invoices</string>
    <string name="id">ID</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
    <string name="le">LE</string>
    <string name="home">Home</string>
    <string name="catalog">Catalog</string>
    <string name="start_visit">Start Visit</string>
    <string name="reports">Reports</string>
    <string name="more">MORE</string>
    <string name="conact_us">Conact us</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="request_catalog">Request Catalog</string>
    <string name="search">Search</string>
    <string name="barcode">Barcode</string>
    <string name="sync">Sync</string>
    <string name="language">Language</string>
    <string name="loading_items">Loading Items..</string>
    <string name="loading_suppliers">Loading Suppliers..</string>
    <string name="loading_groups">Loading Groups..</string>
    <string name="loading_units">Loading Units..</string>
    <string name="loading_customers">Loading Customers..</string>
    <string name="uploading">Uploading Visits...</string>
    <string name="sms_permission">SMS Permission</string>
    <string name="sms_dialog">This App needs SMS Permission To Send Messages. Press Allow To Go On</string>
    <string name="ok">OK</string>
    <string name="alert">Alert</string>
    <string name="cancel_dialog">Sales order will be cancelled Are you sure</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="canceled">Canceled</string>
    <string name="confirm">Confirm</string>
    <string name="order_value_confirmation">Order Value Confirmation</string>
    <string name="confirmed">Confirmed</string>
    <string name="sales_order_cancel">Sales order will be cancelled Are you sure</string>
    <string name="save">Save</string>
    <string name="balance_collect">Balance</string>
    <string name="value_chique_empty">Payment Value and Voucher/Cheque# Can`t Be Empty</string>
    <string name="back_twice_exit">Click Back Twice To Exit</string>
    <string name="order_process">Order Process</string>
    <string name="start">Start</string>
    <string name="visits_report">Visits Report</string>
    <string name="customers_report">Customers Report</string>
    <string name="client_statement">Client Statement</string>
    <string name="wrong_credentials">Wrong User Name Or Password!</string>
    <string name="check_internet">Check Internet Connection</string>
</resources>
