<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_catalog"
            android:icon="@drawable/ic_catalog"
            android:title="@string/catalog" />
        <item
            android:id="@+id/nav_visit"
            android:icon="@drawable/ic_visit"
            android:title="@string/start_visit" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/reports"/>
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_contact_us"
                android:title="@string/conact_us" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_tools"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_exit"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
