<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/white"
    android:padding="0dp"
    android:id="@+id/top1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="50dp">
    <TextView
        android:id="@+id/txtID"
        android:text="@string/payment_id"
        android:gravity="center"
        android:layout_width="100dp"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/txtValue"
        android:text="@string/value"
        android:gravity="center"
        android:layout_width="250dp"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/txtType"
        android:text="@string/payment_type"
        android:gravity="center"
        android:layout_width="120dp"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/txtVoucher"
        android:text="@string/voucher_cheque"
        android:gravity="center"
        android:layout_width="120dp"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/txtDate"
        android:text="@string/date_time"
        android:gravity="center"
        android:layout_width="160dp"
        android:layout_height="match_parent" />

</LinearLayout>