<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="0dp"
        android:id="@+id/top"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:gravity="center"
            android:text="@string/client_id"
            android:layout_width="100dp"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/client_name"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/order_id"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/sales_order_total"
            android:gravity="center"
            android:layout_width="120dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_below="@id/top"
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>