<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="51dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/clientID"
            android:gravity="center"
            android:text="@string/client_id"
            android:layout_width="100dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/clientName"
            android:text="@string/client_name"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/orderID"
            android:text="@string/order_id"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/orderTotal"
            android:text="@string/sales_order_total"
            android:gravity="center"
            android:layout_width="120dp"
            android:layout_height="match_parent" />

    </LinearLayout>
    <View
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentBottom="true"
        android:background="@color/lightGray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</RelativeLayout>