<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerVisitsActivity">

    <LinearLayout
        android:padding="5dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/client_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtClientName"
            android:text="Mahmoud Emad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/client_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtCredit"
            android:text="5156423.21 LE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:padding="5dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:text="Sales Orders:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp">

        <LinearLayout
            android:background="@color/white"
            android:padding="0dp"
            android:id="@+id/top1"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/payment_id"
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/payment_value"
                android:gravity="center"
                android:layout_width="250dp"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/payment_type"
                android:gravity="center"
                android:layout_width="120dp"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/voucher_cheque"
                android:gravity="center"
                android:layout_width="120dp"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/date_time"
                android:gravity="center"
                android:layout_width="160dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_below="@id/top1"
            android:id="@+id/recyclerPayments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp">


        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <LinearLayout
                android:background="@color/white"
                android:padding="0dp"
                android:id="@+id/top"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:visibility="gone"
                    android:gravity="center"
                    android:text="@string/client_id"
                    android:layout_width="100dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:visibility="gone"
                    android:text="@string/client_name_only"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:text="@string/order_id"
                    android:gravity="center"
                    android:layout_width="100dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:text="@string/sales_order_total"
                    android:gravity="center"
                    android:layout_width="120dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_below="@id/top"
                android:id="@+id/recyclerSalesOrder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginStart="10dp"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <LinearLayout
                android:background="@color/white"
                android:padding="0dp"
                android:id="@+id/top2"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:text="@string/unsuccessful_id"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:text="@string/reason"
                    android:gravity="center"
                    android:layout_width="120dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:text="@string/date_time"
                    android:gravity="center"
                    android:layout_width="160dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_below="@id/top2"
                android:id="@+id/recyclerUnsuccessful"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>