<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context=".FeedbackActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lavender"
        android:padding="50dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:hint="@string/name"
                android:layout_marginEnd="50dp"
                android:paddingStart="20dp"
                android:background="@drawable/rounded_edit_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:paddingLeft="20dp"
                android:layout_marginRight="50dp" />

            <EditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:paddingStart="20dp"
                android:background="@drawable/rounded_edit_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:paddingLeft="20dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/edSubject"
            android:hint="@string/subject"
            android:layout_marginTop="50dp"
            android:paddingStart="20dp"
            android:background="@drawable/rounded_edit_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/message"
            android:paddingTop="20dp"
            android:gravity="start"
            android:hint="@string/message"
            android:layout_marginTop="50dp"
            android:paddingStart="20dp"
            android:background="@drawable/rounded_edit_text"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingLeft="20dp" />

        <LinearLayout
            android:gravity="end"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@color/red"
                android:text="@string/reset_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSend"
                android:padding="10dp"
                android:layout_marginStart="50dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@color/green"
                android:text="@string/send_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>