<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="5dp"
        android:textSize="17dp"
        android:text="@string/value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edValue"
        android:paddingStart="5dp"
        android:inputType="numberDecimal"
        android:layout_marginTop="5dp"
        android:textSize="17dp"
        android:background="@drawable/rounded_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="17dp"
                android:text="@string/voucher_cheque_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:paddingStart="5dp"
                android:id="@+id/edNumber"
                android:inputType="number"
                android:background="@drawable/rounded_edit_text"
                android:layout_marginTop="5dp"
                android:textSize="17dp"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <TextView
                android:layout_marginTop="5dp"
                android:textSize="17dp"
                android:text="@string/note_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:gravity="start"
                android:padding="5dp"
                android:id="@+id/edNote"
                android:inputType="textMultiLine"
                android:background="@drawable/rounded_edit_text"
                android:layout_marginTop="5dp"
                android:textSize="17dp"
                android:layout_width="match_parent"
                android:layout_height="110dp" />
        </LinearLayout>
        <RadioGroup
            android:layout_marginStart="15dp"
            android:id="@+id/rg"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:checked="true"
                android:id="@+id/rd1"
                android:text="@string/cash"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <RadioButton
                android:id="@+id/rd2"
                android:layout_marginTop="10dp"
                android:text="@string/cheque"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <RadioButton
                android:id="@+id/rd3"
                android:layout_marginTop="10dp"
                android:text="@string/visa"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </RadioGroup>


    </LinearLayout>

</LinearLayout>