<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SalesOrdersReportActivity">

    <LinearLayout
        android:padding="10dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <TextView
            android:textSize="18dp"
            android:text="@string/client_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtClientID"
            android:textSize="18dp"
            android:text="185956"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/client_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtClientName"
            android:textSize="18dp"
            android:text="Mahmoud Emad Saad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:gravity="start"
            android:id="@+id/txtDate"
            android:textSize="18dp"
            android:text="2018-12-24 09:48PM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/sales_order_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtTotal"
            android:textSize="18dp"
            android:text="500 LE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <Button
            android:id="@+id/btnCancel"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/red"
            android:text="Cancel"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:background="@color/lightGray"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>

</LinearLayout>